--- a/CustomRandom.Editor.csproj
+++ b/CustomRandom.Editor.csproj
@@ -276,7 +276,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\CheatDice\Editor\DigitizeWaveTest.cs" />
+    <Compile Include="Assets\Sample\Editor\CheatRandomTest.cs" />
+    <Compile Include="Assets\Sample\Editor\DigitizeWaveTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
